--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.47MB/s(Youtube:不良林), server: tw6-5641.duuk.info, port: 5306, type: trojan, password: 3681e895-beb2-5114-9fa2-4cfe305291cf, sni: tw6-5641.duuk.info, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.19MB/s(Youtube:不良林), server: xjp001.369boy.com, port: 11001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: xjp001.369boy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-379.7KB/s(Youtube:不良林), server: usa004.369boy.com, port: 14001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa004.369boy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-379.4KB/s(Youtube:不良林), server: usa006.369boy.com, port: 16001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa006.369boy.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.53MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.65MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.20MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 以色列-2.27MB/s(Youtube:不良林), server: 83.229.73.60, port: 50003, type: ss, cipher: aes-256-cfb, password: !<str> 8460400130}
-  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.05MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-373.3KB/s(Youtube:不良林), server: usa005.369boy.com, port: 15001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa005.369boy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 未知国家-319.6KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇺🇸 美国-479.2KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-11.35MB/s(Youtube:不良林), server: 29d78fe.pi.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.pi.gladns.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 以色列-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 未知国家-319.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 以色列-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 未知国家-319.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 以色列-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 未知国家-319.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 以色列-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 未知国家-319.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 以色列-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 未知国家-319.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 以色列-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 未知国家-319.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 以色列-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 未知国家-319.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
