--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-2.19MB/s(Youtube:不良林), server: xjp001.369boy.com, port: 11001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: xjp001.369boy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-379.7KB/s(Youtube:不良林), server: usa004.369boy.com, port: 14001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa004.369boy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-379.4KB/s(Youtube:不良林), server: usa006.369boy.com, port: 16001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa006.369boy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.53MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-373.3KB/s(Youtube:不良林), server: usa005.369boy.com, port: 15001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa005.369boy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 未知国家-319.6KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 🇺🇸 美国-479.2KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-11.35MB/s(Youtube:不良林), server: 29d78fe.pi.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.pi.gladns.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-667.9KB/s(Youtube:不良林), server: jp001.369boy.com, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: jp001.369boy.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.25MB/s(Youtube:不良林), server: xjp001.369boy.com, port: 11001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: xjp001.369boy.com, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-318.7KB/s(Youtube:不良林), server: 2.tiantang.cf, port: 59195, type: trojan, password: pA52tFTlGZ, sni: 2.tiantang.cf, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.04MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.37MB/s(Youtube:不良林), server: 120.132.50.158, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-564.1KB/s(Youtube:不良林), server: 113.31.155.165, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.13MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.57MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇬🇧 英国-225.9KB/s(Youtube:不良林), server: 152.89.210.105, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 未知国家-319.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-225.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 未知国家-319.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-225.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 未知国家-319.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-225.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 未知国家-319.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-225.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 未知国家-319.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-225.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 未知国家-319.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-225.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 未知国家-319.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-225.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
