--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-564.1KB/s(Youtube:不良林), server: 113.31.155.165, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.12MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: 116.129.253.134, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-7.27MB/s(Youtube:不良林), server: 29d78fe.pi.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.pi.gladns.com, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-180.4KB/s(Youtube:不良林), server: 152.89.210.105, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: 116.129.253.134, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.33MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.00MB/s(Youtube:不良林), server: 152.89.210.105, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇭🇰 香港-217.8KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: 770c9e92-f51b-3e52-b932-eba13fb56801, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.54MB/s(Youtube:不良林), server: 116.129.253.245, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.69MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42004, type: trojan, password: af630252-aecc-45cf-b174-5e0782396874, sni: cn.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.04MB/s(Youtube:不良林), server: 116.129.253.245, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-849.7KB/s(Youtube:不良林), server: 116.129.253.245, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.08MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-457.7KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇺🇸 美国-10.96MB/s(Youtube:不良林), server: jp001.369boy.com, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: jp001.369boy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-687.8KB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: 770c9e92-f51b-3e52-b932-eba13fb56801, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-918.4KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-180.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇭🇰 香港-217.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-918.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-180.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇭🇰 香港-217.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-918.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-180.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇭🇰 香港-217.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-918.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-217.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-918.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-180.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇭🇰 香港-217.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-918.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-180.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇭🇰 香港-217.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-918.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-180.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇭🇰 香港-217.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-918.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-564.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-180.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇭🇰 香港-217.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-687.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-918.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
